--- a/style.css
+++ b/style.css
@@ -52,3 +52,28 @@ em {
     font-size: 20pt;
     padding-left: 50px;
  }
+ #class-2 {
+    width: 600px;
+    height: 600px;
+    position: relative;
+    background-color: aliceblue;
+  }
+  #navi,
+  #class-1 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  #infoi {
+    z-index: 10;
+  }
+
+  span {
+    background-color: thistle;
+  }
+  
+  div > span {
+    background-color: violet;
+  }
