--- a/style.css
+++ b/style.css
@@ -77,3 +77,94 @@ em {
   div > span {
     background-color: violet;
   }
+  
+  li { color: violet; } /* bullet */
+  li span { color: black; } /* text */
+
+  a {
+    box-shadow: inset 0 0 0 0 lightcoral;
+    color: lightcoral;
+    margin: 0 -.25rem;
+    padding: 0 .25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  }
+  a:hover {
+    box-shadow: inset 100px 0 0 0 lightcoral;
+    color: white;
+  }
+  a:focus {
+    border-bottom: 1px solid;
+    background: lightblue;}
+.first{
+    color:aquamarine
+}
+.middle{
+    color: blue
+}
+.last{
+    color:red
+}
+.text-1{
+    color:deepskyblue
+}
+.text-2{
+    color:#6a5acd
+}
+.text-3{
+    color:rgba(255, 99, 71, 0.5)
+}
+.box{
+    height: 600px;
+    width: 600px;
+    background-image: url(https://i.pinimg.com/originals/b8/f8/63/b8f8638acef0a7275d55f534401274e6.jpg)
+}
+.box2{
+    height: 600px;
+    width: 600px;
+    background-position: center;
+    background-image: url(https://i.pinimg.com/originals/b8/f8/63/b8f8638acef0a7275d55f534401274e6.jpg)
+}
+.box3{
+    height: 600px;
+    width: 600px;
+    background-position: center;
+    border: 6px solid #555;
+    background-image: url(https://i.pinimg.com/originals/b8/f8/63/b8f8638acef0a7275d55f534401274e6.jpg)
+}
+.box4{
+    height: 600px;
+    width: 600px;
+    background-position: center;
+    border: 5px solid magenta;
+    background-image: url(https://i.pinimg.com/originals/b8/f8/63/b8f8638acef0a7275d55f534401274e6.jpg)
+}
+
+.card {
+    box-shadow: 0 8px 6px -6px black;
+    box-shadow: inset;
+}
+.wildcard{
+    box-shadow:
+    1.9px 1.8px 4.9px -42px rgba(0, 0, 0, 0.043),
+    4.5px 4.1px 11.4px -42px rgba(0, 0, 0, 0.07),
+    8px 7.4px 20.7px -42px rgba(0, 0, 0, 0.088),
+    13.3px 12.4px 34.7px -42px rgba(0, 0, 0, 0.104),
+    22px 20.4px 57.8px -42px rgba(0, 0, 0, 0.12),
+    38.4px 35.6px 102.3px -42px rgba(0, 0, 0, 0.141),
+    83px 77px 225px -42px rgba(0, 0, 0, 0.18)
+  ;
+}
+.invisibleink :hover  {
+    display: block;
+    color: blueviolet;}
+.mushroom{
+    height: 300px;
+    width: 300px;
+    transform: rotate(0.5turn);
+}   
+
+.filter{
+    height: 300px;
+    width: 300px;
+    filter: grayscale(var(--value, 100%));
+}
